Security Features added